--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Discord</title>
   <link rel="stylesheet" href="assets/style/style.css">
 </head>
+
 <body>
   <header>
     <div class="container head debug">
@@ -14,7 +16,7 @@
         Logo
       </div>
       <!-- Lista Link -->
-      <nav>
+      <nav class="link">
         <ul>
           <li><a href="#">Link</a></li>
           <li><a href="#">Link</a></li>
@@ -24,12 +26,30 @@
         </ul>
       </nav>
       <!-- Login -->
-      <div class="button">
+      <div class="buttonhead">
         <button>Login</button>
       </div>
     </div>
   </header>
-  <main></main>
+  <main>
+    <!-- hero -->
+    <section class="box-hero">
+      <div class="container">
+        <div class="hero debug">
+      </div>
+    </section>
+    <section class="due">
+      <div class="container">
+        <div class="img-rana">
+          
+        </div>
+        <div class="info-rana">
+
+        </div>
+      </div>
+    </section>
+  </main>
   <footer></footer>
 </body>
+
 </html>
