[add] section due

--- a/index.html
+++ b/index.html
@@ -34,20 +34,25 @@
   <main>
     <!-- hero -->
     <section class="box-hero">
-      <div class="container">
+      <div class="container ">
         <div class="hero debug">
+        </section>
       </div>
-    </section>
+    <!-- immagine rana -->
     <section class="due">
       <div class="container">
-        <div class="img-rana">
-          
+        <div class="img-rana debug">
+
         </div>
-        <div class="info-rana">
+        <div class="info-rana debug">
 
         </div>
       </div>
     </section>
+    <section class="tre">
+      <div class="container"></div>
+    </section>
+    <section class="quattro"></section>
   </main>
   <footer></footer>
 </body>
