[add] tre section

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <div class="hero debug">
         </section>
       </div>
-    <!-- immagine rana -->
+    <!-- sezione uno -->
     <section class="due">
-      <div class="container">
+      <div class="container ">
         <div class="img-rana debug">
 
         </div>
@@ -49,10 +49,31 @@
         </div>
       </div>
     </section>
+    <!-- sezione tre -->
     <section class="tre">
-      <div class="container"></div>
+      <div class="container reverse">
+        <div class="img-tre debug">
+
+        </div>
+        <div class="info-tre debug">
+
+        </div>
+      </div>
     </section>
-    <section class="quattro"></section>
+    <!-- sezione quattro -->
+    <section class="quattro">
+      <div class="container">
+        <div class="img-quattro debug">
+
+        </div>
+        <div class="info-quattro debug">
+
+        </div>
+      </div>
+    </section>
+    <section class="cinque">
+      
+    </section>
   </main>
   <footer></footer>
 </body>
