--- a/index.html
+++ b/index.html
@@ -71,8 +71,13 @@
         </div>
       </div>
     </section>
+    <!-- sezzione 5 -->
     <section class="cinque">
-      
+      <div class="container">
+        <div class="img-tecnologia debug">
+
+        </div>
+      </div>
     </section>
   </main>
   <footer></footer>
