--- a/index.html
+++ b/index.html
@@ -80,7 +80,25 @@
       </div>
     </section>
   </main>
-  <footer></footer>
+  <footer>
+    <!-- sezione footer 1 -->
+    <section class="foot-uno ">
+      <div class="container debug">
+        <div class="menu debug"></div>
+        <div class="colonna1 debug"></div>
+        <div class="colonna2 debug"></div>
+        <div class="colonna3 debug"></div>
+        <div class="colonna4 debug"></div>
+      </div>
+    </section>
+    
+    <!-- sezione footer 2 -->
+    <section class="Foot-due">
+      <div class="container">
+        
+      </div>
+    </section>
+  </footer>
 </body>
 
 </html>
