--- a/index.html
+++ b/index.html
@@ -93,9 +93,16 @@
     </section>
     
     <!-- sezione footer 2 -->
-    <section class="Foot-due">
+    <section class="foot-due">
       <div class="container">
-        
+        <div class="box-footer">
+          <div class="logo2 debug">
+            Logo
+          </div>
+          <div class="button2 debug">
+            <button>Bottone</button>
+          </div>
+        </div>
       </div>
     </section>
   </footer>
